# quince

./: CMakeLists.txt
binding/postgresql/: CMakeLists.txt  database.cpp  dialect_sql.cpp  session.cpp
binding/sqlite/: database.cpp  dialect_sql.cpp  session.cpp
core/: abstract_column_sequence.cpp  binomen.cpp  cell.cpp  database.cpp  query_base.cpp  row.cpp  sql.cpp  table.cpp
core/exprn_mappers/: CMakeLists.txt  choose.cpp  exprn_mapper.cpp  functions.cpp  operators.cpp  prefix.cpp
core/mappers/: CMakeLists.txt  abstract_mapper_base.cpp  class_mapper_base.cpp  column_mapper.cpp  persistent_column_mapper.cpp  serial_mapper.cpp  tuple_mapper.cpp
include/quince/: database.h  mapping_customization.h  query.h  serial.h  table.h  table_alias.h
include/quince/detail/: abstract_query.h  binomen.h  cell.h  clone.h  column_type.h  junction.h  mapper_factory.h  query_base.h  row.h  sql.h  table_base.h  util.h
include/quince/exprn_mappers/: choose.h  collective.h  functions.h  operators.h
include/quince/exprn_mappers/detail/: exprn_mapper.h
include/quince/mappers/: direct_mapper.h  numeric_cast_mapper.h  optional_mapper.h  reinterpret_cast_mapper.h  serial_mapper.h  tuple_mapper.h
include/quince/mappers/detail/: abstract_mapper.h  abstract_mapper_base.h  class_mapper_base.h  column_mapper.h  exposed_mapper_type.h  persistent_column_mapper.h  static_mapper_type.h  user_defined_class_mapper.h
include/quince/postgresql/: database.h
include/quince/postgresql/detail/: dialect_sql.h  session.h
include/quince/sqlite/: database.h
include/quince/sqlite/detail/: dialect_sql.h  session.h
src/: CMakeLists.txt  sql.cpp
src/exprn_mappers/: collective.cpp  functions.cpp
